trying to fix the padding gap between image and card info

--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,11 @@ h1 {
    display: grid;
 
    width: 960px;
-   margin: 4em auto;
+   margin: 5em auto;
 
-   grid-template-rows: auto;
    grid-template-columns: repeat(3, 1fr);
-   grid-gap: 1.5em;
+   grid-template-rows: auto;
+   grid-column-gap: 1.5em;
 }
 
 .image-container img {
@@ -73,6 +73,5 @@ h1 {
 
 h2 {
    padding: 0.8em 0;
-
    font-size: 2em;
 }
